<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:fitsSystemWindows="false"
     >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:background="@color/purple_button"
            android:layout_height="70dip">




        <TextView
            android:layout_width="match_parent"
            android:layout_height="70dip"
            android:gravity="center"
            android:paddingTop="15dip"
            android:textSize="16sp"
            android:textStyle="bold"
            android:text="@string/ddhk_Login_userLogin"
            android:textColor="@color/white" />
        </RelativeLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="102dip"
            android:orientation="vertical" >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="0dip"
                android:layout_weight="1" >

                <TextView
                    android:id="@+id/login_usericon"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="20dp"
                    android:gravity="center"
                    android:text="@string/ddhk_Login_account" />

                <EditText
                    android:id="@+id/ddhk_login_username"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="20dp"
                    android:layout_toEndOf="@id/login_usericon"
                    android:background="@null"
                    android:hint="@string/ddhk_Login_phone"
                    android:textSize="12sp" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"
                android:background="@color/qianhui" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="0dip"
                android:layout_weight="1" >

                <TextView
                    android:id="@+id/iv_pwdicon"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="20dp"
                    android:gravity="center"
                    android:text="@string/ddhk_Login_password" />

                <EditText
                    android:id="@+id/ddhk_login_password"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="20dp"
                    android:layout_toEndOf="@id/iv_pwdicon"
                    android:background="@null"
                    android:hint="@string/ddhk_Login_inputpwd"
                    android:inputType="textPassword"
                    android:textSize="12sp" />
            </RelativeLayout>


        </LinearLayout>



        <Button
            android:id="@+id/ddhk_login_forgetpwd"
            android:layout_width="match_parent"
            android:layout_height="40dip"
            android:visibility="gone"
            android:background="@null"
            android:text="@string/ddhk_Login_forgetpwd"
            android:textColor="@color/gray_details"
            android:textSize="14sp" />

        <LinearLayout
            android:id="@+id/ddhk_login_register"
            android:layout_width="match_parent"
            android:layout_height="40dip"
            android:visibility="invisible"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="0dip"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:gravity="end|center_vertical"
                android:text="@string/ddhk_Login_noaccount" />

            <TextView
                android:layout_width="0dip"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:gravity="start|center_vertical"
                android:text="@string/ddhk_Login_register"
                android:textColor="@color/blue_pressed" />
        </LinearLayout>
        <Button
            android:id="@+id/ddhk_login_login"
            android:layout_width="match_parent"
            android:layout_height="40dip"
            android:layout_margin="20dip"
            android:background="@drawable/btn_order_shape"
            android:text="@string/ddhk_Login_login"
            android:textColor="@color/white" />

    </LinearLayout>



    <TextView
        android:layout_width="match_parent"
        android:layout_height="40dip" />

</LinearLayout>